Maquetación desktop implementando grid

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/desktop.css" media="(min-width: 930px)">
   <title>Time Tracking Dashboard</title>
 </head>
 <body>
@@ -52,7 +53,7 @@
         <div class="background-icon-container">
           <img src="./images/icon-play.svg" alt="Icon play">
         </div>
-        <div class="data-containers play">
+        <div class="data-containers play-data">
           <div class="title-and-menu">
             <h2 class="title play">Play</h2>
             <img src="./images/icon-ellipsis.svg" alt="Menu icon">
