Lógica de la aplicación implementada con JavaScript

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="profile-info">
           <h2>Report for</h2>
           <h1>Jeremy Robson</h1>
-        </div>        
+        </div>
       </div>
       <div class="menu">
         <p id="daily">Daily</p>
@@ -33,7 +33,7 @@
 
     <section class="data-section">
 
-      <div class="containers work-container">
+      <div class="containers work-container" data-title="Work">
         <div class="background-icon-container">
           <img src="./images/icon-work.svg" alt="Icon work">
         </div>
@@ -41,15 +41,15 @@
           <div class="title-and-menu">
             <h2 class="title work">Work</h2>
             <img src="./images/icon-ellipsis.svg" alt="Menu icon">
-          </div>          
+          </div>
           <div class="time">
             <p class="current-time">32hrs</p>
             <p class="previous-time">Last week - 36hrs</p>
-          </div>          
+          </div>
         </div>
       </div>
 
-      <div class="containers play-container">
+      <div class="containers play-container" data-title="Play">
         <div class="background-icon-container">
           <img src="./images/icon-play.svg" alt="Icon play">
         </div>
@@ -61,11 +61,11 @@
           <div class="time">
             <p class="current-time">10hrs</p>
             <p class="previous-time">Last week - 8hrs</p>
-          </div>          
+          </div>
         </div>
       </div>
 
-      <div class="containers study-container">
+      <div class="containers study-container" data-title="Study">
         <div class="background-icon-container">
           <img src="./images/icon-study.svg" alt="Icon study">
         </div>
@@ -73,15 +73,15 @@
           <div class="title-and-menu">
             <h2 class="title study">Study</h2>
             <img src="./images/icon-ellipsis.svg" alt="Menu icon">
-          </div>          
+          </div>
           <div class="time">
             <p class="current-time">4hrs</p>
             <p class="previous-time">Last week - 7hrs</p>
-          </div>          
+          </div>
         </div>
       </div>
 
-      <div class="containers exercise-container">
+      <div class="containers exercise-container" data-title="Exercise">
         <div class="background-icon-container">
           <img src="./images/icon-exercise.svg" alt="Icon exercise">
         </div>
@@ -89,15 +89,15 @@
           <div class="title-and-menu">
             <h2 class="title exercise">Exercise</h2>
             <img src="./images/icon-ellipsis.svg" alt="Menu icon">
-          </div>        
+          </div>
           <div class="time">
             <p class="current-time">4hrs</p>
             <p class="previous-time">Last week - 5hrs</p>
-          </div>          
+          </div>
         </div>
       </div>
 
-      <div class="containers social-container">
+      <div class="containers social-container" data-title="Social">
         <div class="background-icon-container">
           <img src="./images/icon-social.svg" alt="Icon social">
         </div>
@@ -105,30 +105,32 @@
           <div class="title-and-menu">
             <h2 class="title social">Social</h2>
             <img src="./images/icon-ellipsis.svg" alt="Menu icon">
-          </div>       
+          </div>
           <div class="time">
             <p class="current-time">5hrs</p>
             <p class="previous-time">Last week - 10hrs</p>
-          </div>          
+          </div>
         </div>
       </div>
 
-      <div class="containers selfcare-container">
+      <div class="containers selfcare-container" data-title="Self Care">
         <div class="background-icon-container">
           <img src="./images/icon-self-care.svg" alt="Icon self-care">
         </div>
         <div class="data-containers selfcare-data">
           <div class="title-and-menu">
-            <h2 class="title selfcare">Self-care</h2>
+            <h2 class="title selfcare">Self Care</h2>
             <img src="./images/icon-ellipsis.svg" alt="Menu icon">
-          </div>       
+          </div>
           <div class="time">
             <p class="current-time">2hrs</p>
             <p class="previous-time">Last week - 2hrs</p>
-          </div>          
+          </div>
         </div>
       </div>
-    </section>   
+    </section>
   </main>
+
+  <script src="./app.js"></script>
 </body>
 </html>
